Removed unused tags

--- a/index.html
+++ b/index.html
@@ -97,29 +97,9 @@
 
   </div>
 
-<!-- 
-<div class="fade-element">
-  Hover over me to see the opacity transition.
-</div>
-<style>
-.fade-element {
-  /* Initial state */
-  opacity: 1;
-  background-color: #333;
-  color: white;
-  padding: 20px;
-  /* Specifies that the 'opacity' property should transition over 0.5 seconds with an 'ease' timing function */
-  transition: opacity 0.5s ease;
-}
-
-.fade-element:hover {
-  /* The final state, triggering the transition */
-  opacity: 0.5;
-}
-</style>
- -->
-
-  <!-- <script defer src="https://radiopotok.ru/f/script6.1/2311.js" charset="UTF-8"></script>
+  <!--
+  Типа пасхалочка: моё любимое радио :)
+  <script defer src="https://radiopotok.ru/f/script6.1/2311.js" charset="UTF-8"></script>
   <div class="RP-SCRIPT"><a class="RP-LINK" href="https://radiopotok.ru/lofiradio"></a></div>
  -->
   <script>
